# flowforge

./: .dockerignore  .env.example  .gitattributes  .gitignore  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: .gitkeep
app/: __init__.py  main.py
app/api/: deps.py
app/api/v1/: router.py
app/api/v1/endpoints/: __init__.py
app/core/: __init__.py  config.py  constants.py  exceptions.py  logging.py  security.py
app/db/: init_db.py  session.py
app/models/: dag.py  log.py  run.py  schedule.py  task.py  user.py
app/repositories/: base.py  dag_repo.py  run_repo.py  user_repo.py
app/schemas/: ai.py  dag.py  health.py  run.py  task.py  user.py
app/services/: dag_parser.py  event_bus.py  executor_service.py  llm_service.py  scheduler_service.py  topology.py  ws_manager.py
app/websockets/: __init__.py
app/workers/: beat_schedule.py  celery_app.py  tasks.py
app/workers/operators/: __init__.py  base.py  bash_op.py  http_op.py  python_op.py  sql_op.py
docker/: api.Dockerfile  worker.Dockerfile
docs/: PROJECT_CONTEXT.md  implementation-checklist.md
docs/architecture/: high-level-design.md  low-level-design.md
docs/phases/: phase-0.md
scripts/: run_local.sh  seed.py
tests/: __init__.py  conftest.py  factories.py
tests/integration/: test_dags_api.py  test_runs_api.py  test_websocket.py
tests/unit/: test_dag_parser.py  test_fsm.py  test_health.py  test_operator_registry.py  test_topology.py
